Añadidos News (Noticias) y mejorado detalles de algunas clases