@@ -11,62 +11,70 @@ import org.springframework.security.config.annotation.authentication.configurati
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
-@EnableMethodSecurity(prePostEnabled = true)
-public class SpringSecurityConfig {
-
+@EnableMethodSecurity( prePostEnabled = true )
+public class SpringSecurityConfig
+{
+    
     private AuthenticationConfiguration authenticationConfiguration;
-
+    
+    
     @Autowired
-    private void setAuthenticationConfiguration(AuthenticationConfiguration authenticationConfiguration) {
+    private void setAuthenticationConfiguration( AuthenticationConfiguration authenticationConfiguration )
+    {
         this.authenticationConfiguration = authenticationConfiguration;
     }
-
+    
+    
     @Bean
-    public AuthenticationManager authenticationManager() throws Exception {
+    public AuthenticationManager authenticationManager() throws Exception
+    {
         return authenticationConfiguration.getAuthenticationManager();
     }
-
+    
+    
     @Bean
-    public PasswordEncoder passwordEncoder() {
+    public PasswordEncoder passwordEncoder()
+    {
         return new BCryptPasswordEncoder();
     }
-
+    
+    
     @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-        return http
-                .authorizeHttpRequests(authz -> authz
-                        .requestMatchers(HttpMethod.GET, "/users", "/meetings", "/affiliates", "/users/{username}/roles").permitAll()
-                        .requestMatchers(HttpMethod.POST, "/users/register").permitAll()
-                        .anyRequest().authenticated()
-                )
-                .addFilter(new JwtAuthenticationFilter(authenticationManager()))  // Filtro JWT de autenticación
-                .addFilter(new JwtValidationFilter(authenticationManager())) // Filtro JWT de validación
-                .csrf(csrf -> csrf.disable()) // Desactivando CSRF, ya que estás usando JWT
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)) // No utilizar sesión HTTP, solo tokens
+    public SecurityFilterChain filterChain( HttpSecurity http ) throws Exception
+    {
+        return http.authorizeHttpRequests( authz -> authz.requestMatchers( HttpMethod.GET, "/users", "/meetings", "/affiliates", "/users/{username}/roles", "/news/*" ).permitAll()
+                        .requestMatchers( HttpMethod.POST, "/users/register" ).permitAll().anyRequest().authenticated() )
+                .addFilter( new JwtAuthenticationFilter( authenticationManager() ) )  // Filtro JWT de autenticación
+                .addFilter( new JwtValidationFilter( authenticationManager() ) ) // Filtro JWT de validación
+                .csrf( csrf -> csrf.disable() ) // Desactivando CSRF, ya que estás usando JWT
+                .cors( cors -> cors.configurationSource( corsConfigurationSource() ) )
+                .sessionManagement( session -> session.sessionCreationPolicy( SessionCreationPolicy.STATELESS ) ) // No utilizar sesión HTTP, solo tokens
                 .build();
     }
-
+    
+    
     @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
+    public CorsConfigurationSource corsConfigurationSource()
+    {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOriginPatterns(Arrays.asList("http://localhost:5173"));
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH"));
-        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
-        config.setAllowCredentials(true);
-
+        config.setAllowedOriginPatterns( List.of( "http://localhost:5173" ) );
+        config.setAllowedMethods( Arrays.asList( "GET", "POST", "PUT", "DELETE", "PATCH" ) );
+        config.setAllowedHeaders( Arrays.asList( "Authorization", "Content-Type" ) );
+        config.setAllowCredentials( true );
+        
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config);
+        source.registerCorsConfiguration( "/**", config );
         return source;
     }
 }
